--- a/index.html
+++ b/index.html
@@ -59,6 +59,34 @@
     <a href="/thoughts">Thoughts</a>
     <a href="/projects">Projects</a>
   </nav>
-</body>
+   <script>
+    // Wait 3 seconds, then fade in the content
+    setTimeout(() => {
+      const content = document.getElementById("content");
+      content.classList.remove("hidden");
+      content.classList.add("fade-in");
+    }, 3000);
+  </script>
+</body
+
+  #content {
+  opacity: 0;
+  transition: opacity 1.5s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.hidden {
+  display: flex;
+  opacity: 0;
+}
+
+.fade-in {
+  opacity: 1;
+}
+
 </html>
 
