--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     h1 {
-      font-size: 2.5em;
+      font-size: 3.5em;
       margin-bottom: 1em;
     }
 
@@ -32,7 +32,7 @@
     nav a {
       text-decoration: none;
       color: #e8e6e3;
-      font-size: 1.2em;
+      font-size: 1.5em;
       transition: color 0.2s ease;
     }
 
@@ -42,7 +42,7 @@
 
     @media (max-width: 600px) {
       h1 {
-        font-size: 2em;
+        font-size: 3em;
       }
 
       nav a {
@@ -52,13 +52,15 @@
   </style>
 </head>
 <body>
-  <h1>Your Name</h1>
-  <nav>
-    <a href="/music">Music</a>
-    <a href="/about">About</a>
-    <a href="/thoughts">Thoughts</a>
-    <a href="/projects">Projects</a>
-  </nav>
+  <div id="content" class="hidden">
+    <h1>Your Name</h1>
+    <nav>
+      <a href="/music">Music</a>
+      <a href="/about">About</a>
+      <a href="/thoughts">Thoughts</a>
+      <a href="/projects">Projects</a>
+    </nav>
+  </div>
    <script>
     // Wait 3 seconds, then fade in the content
     setTimeout(() => {
