--- a/index.html
+++ b/index.html
@@ -3,56 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name</title>
+  <title>Delayed Homepage</title>
   <style>
     body {
-      background-color: #202124;
-      color: #e8e6e3;
-      font-family: sans-serif;
       margin: 0;
-      padding: 0;
+      background-color: #202124;
+      font-family: 'Segoe UI', sans-serif;
+      color: #F2E8D5;
+    }
+
+    #content {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      opacity: 0;
+      transition: opacity 1.5s ease;
     }
 
-    h1 {
-      font-size: 3.5em;
-      margin-bottom: 1em;
+    #content.show {
+      opacity: 1;
     }
 
     nav {
       display: flex;
       flex-direction: column;
-      gap: 0.5em;
+      gap: 1rem;
+      margin-top: 1rem;
     }
 
     nav a {
+      color: #F2E8D5;
       text-decoration: none;
-      color: #e8e6e3;
-      font-size: 1.5em;
-      transition: color 0.2s ease;
+      font-size: 1.5rem;
+      transition: color 0.3s;
     }
 
     nav a:hover {
-      color: #aaa;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 3em;
-      }
-
-      nav a {
-        font-size: 1em;
-      }
+      color: #ffd89c;
     }
   </style>
 </head>
 <body>
-  <div id="content" class="hidden">
+
+  <div id="content">
     <h1>Your Name</h1>
     <nav>
       <a href="/music">Music</a>
@@ -61,34 +56,17 @@
       <a href="/projects">Projects</a>
     </nav>
   </div>
-   <script>
+
+  <script>
     // Wait 3 seconds, then fade in the content
-    setTimeout(() => {
-      const content = document.getElementById("content");
-      content.classList.remove("hidden");
-      content.classList.add("fade-in");
-    }, 3000);
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementById("content").classList.add("show");
+      }, 3000);
+    };
   </script>
-</body
 
-  #content {
-  opacity: 0;
-  transition: opacity 1.5s ease;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-}
-
-.hidden {
-  display: flex;
-  opacity: 0;
-}
-
-.fade-in {
-  opacity: 1;
-}
-
+</body>
 </html>
+
 
