--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Delayed Homepage</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
+      margin: 0;
+      background-color: #202124;
       font-family: 'Segoe UI', sans-serif;
-      color: #000000;
+      color: #F2E8D5;
       overflow: hidden;
     }
 
-    /* Background video container */
+    /* Video Background */
     .video-background {
       position: fixed;
       top: 0;
@@ -28,43 +24,54 @@
       overflow: hidden;
     }
 
-.video-background video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  object-position: center center; /* <-- keeps the video centered */
-}
+    .video-background video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      object-position: center center;
+    }
 
+    /* Main Content */
     #content {
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
       opacity: 0;
       transition: opacity 1.5s ease;
-      text-align: center;
-      padding: 2rem;
     }
 
     #content.show {
       opacity: 1;
     }
 
+    /* Centered Box */
+    .menu-box {
+      background-color: rgba(32, 33, 36, 0.85); /* semi-transparent background */
+      padding: 40px;
+      border-radius: 20px;
+      text-align: center;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    }
+
+    h1 {
+      font-size: 3rem; /* increase title size */
+      margin-bottom: 2rem;
+    }
+
     nav {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      margin-top: 1rem;
     }
 
     nav a {
-      color: #000000;
+      color: #F2E8D5;
       text-decoration: none;
-      font-size: 2.5rem;
+      font-size: 1.5rem;
       transition: color 0.3s;
     }
 
@@ -78,24 +85,26 @@
   <!-- Video Background -->
   <div class="video-background">
     <video autoplay muted loop playsinline>
-      <source src="photos/bckvid.mp4" type="video/mp4" />
+      <source src="photos/your-video.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
 
-  <!-- Delayed Content -->
+  <!-- Content -->
   <div id="content">
-    <h1>Your Name</h1>
-    <nav>
-      <a href="/music">Music</a>
-      <a href="/about">About</a>
-      <a href="/thoughts">Thoughts</a>
-      <a href="/projects">Projects</a>
-    </nav>
+    <div class="menu-box">
+      <img src='https://dejay22kar.github.io/jay22kar/favicon.png' height='50px' width='50px'><h1>Jay22kar</h1>
+      <nav>
+        <a href="/music">Music</a>
+        <a href="/about">About</a>
+        <a href="/thoughts">Thoughts</a>
+        <a href="/projects">Projects</a>
+      </nav>
+    </div>
   </div>
 
+  <!-- Fade-in Script -->
   <script>
-    // Wait 3 seconds, then fade in the content
     window.onload = () => {
       setTimeout(() => {
         document.getElementById("content").classList.add("show");
