--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Delayed Homepage</title>
+  <title>Jay22kar</title>
   <style>
     body {
       margin: 0;
@@ -58,20 +58,20 @@
     }
 
     h1 {
-      font-size: 3rem; /* increase title size */
+      font-size: 2rem; /* increase title size */
       margin-bottom: 2rem;
     }
 
     nav {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.8rem;
     }
 
     nav a {
       color: #F2E8D5;
       text-decoration: none;
-      font-size: 1.5rem;
+      font-size: 1rem;
       transition: color 0.3s;
     }
 
@@ -85,7 +85,7 @@
   <!-- Video Background -->
   <div class="video-background">
     <video autoplay muted loop playsinline>
-      <source src="photos/your-video.mp4" type="video/mp4" />
+      <source src="photos/bkgvid.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
@@ -93,7 +93,7 @@
   <!-- Content -->
   <div id="content">
     <div class="menu-box">
-      <img src='https://dejay22kar.github.io/jay22kar/favicon.png' height='50px' width='50px'><h1>Jay22kar</h1>
+      <img src='https://dejay22kar.github.io/jay22kar/favicon.png' height='100px' width='100px'><h1>Jay22kar</h1>
       <nav>
         <a href="/music">Music</a>
         <a href="/about">About</a>
