--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     h1 {
       font-size: 2rem; /* increase title size */
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
 
     nav {
@@ -71,7 +71,7 @@
     nav a {
       color: #F2E8D5;
       text-decoration: none;
-      font-size: 1rem;
+      font-size: 1.5rem;
       transition: color 0.3s;
     }
 
@@ -85,7 +85,7 @@
   <!-- Video Background -->
   <div class="video-background">
     <video autoplay muted loop playsinline>
-      <source src="photos/bkgvid.mp4" type="video/mp4" />
+      <source src="photos/bckvid.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
@@ -95,10 +95,11 @@
     <div class="menu-box">
       <img src='https://dejay22kar.github.io/jay22kar/favicon.png' height='100px' width='100px'><h1>Jay22kar</h1>
       <nav>
-        <a href="/music">Music</a>
-        <a href="/about">About</a>
-        <a href="/thoughts">Thoughts</a>
-        <a href="/projects">Projects</a>
+        <a href="/music">Me</a>
+        <a href="/about">Photos</a>
+        <a href="/thoughts">Music</a>
+        <a href="/projects">Thoughts & Feelings</a>
+        <a href="/jay222kar">The other Jay</a>
       </nav>
     </div>
   </div>
