--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       background-color: #202124;
       font-family: 'Segoe UI', sans-serif;
-      color: #F2E8D5;
+      color: #333;
       overflow: hidden;
     }
 
@@ -48,18 +48,19 @@
       opacity: 1;
     }
 
-    /* Centered Box */
+    /* Centered Box - now inverted (light box) */
     .menu-box {
-      background-color: rgba(32, 33, 36, 0.85); /* semi-transparent background */
+      background-color: rgba(255, 255, 255, 0.92);
       padding: 40px;
       border-radius: 20px;
       text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      box-shadow: 0 0 25px rgba(0,0,0,0.5);
+      color: #222; /* text inside the box */
     }
 
     h1 {
-      font-size: 2rem; /* increase title size */
-      margin-bottom: 1rem;
+      font-size: 2.5rem;
+      margin-bottom: 1.5rem;
     }
 
     nav {
@@ -69,14 +70,31 @@
     }
 
     nav a {
-      color: #F2E8D5;
+      color: #333;
       text-decoration: none;
       font-size: 1.5rem;
-      transition: color 0.3s;
+      position: relative;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -4px;
+      width: 100%;
+      height: 2px;
+      background-color: #999;
+      transform: scaleX(0);
+      transform-origin: left;
+      transition: transform 0.3s ease;
+    }
+
+    nav a:hover::after {
+      transform: scaleX(1);
     }
 
     nav a:hover {
-      color: #ffd89c;
+      color: #000;
     }
   </style>
 </head>
@@ -93,7 +111,8 @@
   <!-- Content -->
   <div id="content">
     <div class="menu-box">
-      <img src='https://dejay22kar.github.io/jay22kar/favicon.png' height='100px' width='100px'><h1>Jay22kar</h1>
+      <img src='https://dejay22kar.github.io/jay22kar/photos/favicon2.png' height='100px' width='100px'>
+      <h1>Jay22kar</h1>
       <nav>
         <a href="/music">Me</a>
         <a href="/about">Photos</a>
