--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <!-- Content -->
   <div id="content">
     <div class="menu-box">
-      <img src='https://dejay22kar.github.io/jay22kar/photos/favicon2.png' height='100px' width='100px'>
+      <img src='https://dejay22kar.github.io/jay22kar/photos/favicon.png' height='100px' width='100px' style="display: block; margin: 0 auto;" />
       <h1>Jay22kar</h1>
       <nav>
         <a href="/music">Me</a>
