--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
   <!-- Content -->
   <div id="content">
     <div class="menu-box">
-      <img src='https://dejay22kar.github.io/jay22kar/photos/favicon.png' height='100px' width='100px' style="display: block; margin: 0 auto;" />
+      <img src='https://dejay22kar.github.io/jay22kar/photos/favicon2.png' height='100px' width='137px' style="vertical-align: bottom;" />
       <h1>Jay22kar</h1>
       <nav>
         <a href="/music">Me</a>
-        <a href="/about">Photos</a>
         <a href="/thoughts">Music</a>
+        <a href="/about">Photos</a>
         <a href="/projects">Thoughts & Feelings</a>
         <a href="/jay222kar">The other Jay</a>
       </nav>
