--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
   <!-- Content -->
   <div id="content">
     <div class="menu-box">
-      <img src='https://dejay22kar.github.io/jay22kar/photos/favicon2.png' height='100px' width='137px' style="vertical-align: bottom;" />
+        <img 
+    src="https://dejay22kar.github.io/jay22kar/favicon.png" 
+    height="125" 
+    width="125" 
+    style="display: block; margin: 0 auto 0.5rem auto; padding: 0;" 
+    alt="favicon"
+    />
       <h1>Jay22kar</h1>
       <nav>
         <a href="/music">Me</a>
