--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="photos/favicon.png">
   <title>Jay22kar</title>
   <style>
     body {
@@ -60,13 +61,14 @@
 
     h1 {
       font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.75rem;
+      margin-bottom: 0.75rem;
     }
 
     nav {
       display: flex;
       flex-direction: column;
-      gap: 0.8rem;
+      gap: 0.5rem;
     }
 
     nav a {
@@ -112,7 +114,7 @@
   <div id="content">
     <div class="menu-box">
         <img 
-    src="https://dejay22kar.github.io/jay22kar/favicon.png" 
+    src="/photos/favicon.png" 
     height="125" 
     width="125" 
     style="display: block; margin: 0 auto 0.5rem auto; padding: 0;" 
