--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 
     h1 {
       font-size: 2.5rem;
-      margin-bottom: 0.75rem;
-      margin-bottom: 0.75rem;
+      margin: 0.75rem 0;
     }
 
     nav {
@@ -123,8 +122,8 @@
       <h1>Jay22kar</h1>
       <nav>
         <a href="/music">Me</a>
-        <a href="/thoughts">Music</a>
         <a href="/about">Photos</a>
+        <a href="/thoughts">My favorites</a>
         <a href="/projects">Thoughts & Feelings</a>
         <a href="/jay222kar">The other Jay</a>
       </nav>
