--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
 
     /* Centered Box - now inverted (light box) */
     .menu-box {
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color: rgba(255, 255, 255, 0.9);
       padding: 40px;
       border-radius: 20px;
       text-align: center;
       box-shadow: 0 0 25px rgba(0,0,0,0.6);
       color: #222; /* text inside the box */
+      width: 80%;         /* Responsive width */
+      max-width: 400px;   /* Limit max size for large screens */
+      box-sizing: border-box;
     }
 
     h1 {
