--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
     nav a:hover {
       color: #000;
     }
+
+    @media (max-width: 500px) {
+  .menu-box {
+    padding: 20px;
+    border-radius: 12px;
+  }
+
+  h1 {
+    font-size: 1.6rem;
+  }
+
+  nav a {
+    font-size: 1.2rem;
+  }
+}
   </style>
 </head>
 <body>
