--- a/index.html
+++ b/index.html
@@ -130,13 +130,8 @@
   <!-- Content -->
   <div id="content">
     <div class="menu-box">
-        <img 
-    src="/photos/favicon.png" 
-    height="125" 
-    width="125" 
-    style="display: block; margin: 0 auto 0.5rem auto; padding: 0;" 
-    alt="favicon"
-    />
+     <!--   <img src="/photos/favicon.png" height="125" width="125" style="display: block; margin: 0 auto 0.5rem auto; padding: 0;" alt="favicon" /> -->
+      <video src="/photos/blinkingJay.webm" width="120" height="120" autoplay muted loop playsinline style="display: block; margin: 0 auto 0.5rem auto; padding: 0;"></video>
       <h1>Jay22kar</h1>
       <nav>
         <a href="/music">Me</a>
