--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <h1>Jay22kar</h1>
       <nav>
         <a href="/music">Me</a>
-        <a href="/about">Photos</a>
+        <a href="/frozen-moments">Photos</a>
         <a href="/thoughts">My favorites</a>
         <a href="/projects">Thoughts & Feelings</a>
         <a href="/jay222kar">The other Jay</a>
