--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </video>
       <h1>Jay22kar</h1>
       <nav>
-        <a href="/music">Me</a>
+        <a href="/me">Me</a>
         <a href="/frozen-moments">Photos</a>
         <a href="/thoughts">My favorites</a>
         <a href="/projects">Thoughts & Feelings</a>
