--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin: 0.75rem 0;
+      font-size: 3rem;
+      margin-top: 1rem;
+      margin-bottom: 2rem;
     }
 
     nav {
@@ -76,7 +77,7 @@
     nav a {
       color: #333;
       text-decoration: none;
-      font-size: 1.5rem;
+      font-size: 2rem;
       position: relative;
     }
 
@@ -130,7 +131,7 @@
   <!-- Content -->
   <div id="content">
     <div class="menu-box">
-    <video autoplay muted loop playsinline width="125" height="125" style="display: block; margin: 0 auto 0.8rem auto; padding: 0;">
+    <video autoplay muted loop playsinline width="125" height="125" style="display: block; margin: 0 auto 0.5rem auto; padding: 0;">
   <source src="/photos/blinkingJay.webm" type="video/webm" />
   <source src="/photos/blinkingJay.mp4" type="video/mp4" />
   <img src="/photos/favicon.png" alt="Favicon animation fallback" width="125" height="125" />
