--- a/404.html
+++ b/404.html
@@ -18,21 +18,33 @@
       justify-content: center;
       min-height: 100vh;
     }
-  video {
-  max-width: 90vw;
-  height: auto;
-  opacity: 1;
-  pointer-events: none;
-  display: block;
-  object-fit: contain;
-}
-
-  @media (min-width: 768px) {
-  video {
-    max-width: 50vw;
-    object-fit: contain;
-  }
-}
+            .video-wrapper {
+        position: relative;
+        width: 90vw;
+        max-width: 100%;
+        margin: 0 auto;
+        padding-bottom: 100%; /* 16:9 aspect ratio */
+        height: 0;
+        overflow: hidden;
+      }
+      
+      .video-wrapper video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        pointer-events: none;
+        opacity: 1;
+      }
+      
+      @media (min-width: 768px) {
+        .video-wrapper {
+          width: 50vw;
+          padding-bottom: 50%; /* 16:9 but scaled for 50% width */
+        }
+      }
 
     .text-content {
       margin-top: 2rem; /* space below video */
@@ -52,11 +64,13 @@
 </head>
   
 <body>
+  <div class="video-wrapper">
   <video autoplay muted loop playsinline>
     <source src="photos/blinkingJay.webm" type="video/webm" />
     <source src="photos/blinkingJay.mp4" type="video/mp4" />
     <!-- fallback -->
   </video>
+    </div>
   <div class="text-content">
     <h1 style="margin: 0;">404</h1>
     <p>
