--- a/404.html
+++ b/404.html
@@ -18,20 +18,17 @@
       justify-content: center;
       min-height: 100vh;
     }
-            .video-wrapper {
-        position: relative;
+      .video-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 90vw;
-        max-width: 100%;
-        margin: 0 auto;
-        padding-bottom: 100%; /* 16:9 aspect ratio */
-        height: 0;
+        aspect-ratio: 1 / 1;
+        margin: 2rem auto;
         overflow: hidden;
       }
       
       .video-wrapper video {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
         object-fit: contain;
@@ -39,12 +36,13 @@
         opacity: 1;
       }
       
+      /* Make it smaller on desktops */
       @media (min-width: 768px) {
         .video-wrapper {
           width: 50vw;
-          padding-bottom: 50%; /* 16:9 but scaled for 50% width */
         }
       }
+
 
     .text-content {
       margin-top: 2rem; /* space below video */
@@ -71,6 +69,7 @@
     <!-- fallback -->
   </video>
     </div>
+  
   <div class="text-content">
     <h1 style="margin: 0;">404</h1>
     <p>
