--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
         align-items: center;
         width: 90vw;
         aspect-ratio: 1 / 1;
-        margin: 2rem auto;
+        margin: 1.5rem auto;
         overflow: hidden;
       }
       
@@ -39,7 +39,7 @@
       /* Make it smaller on desktops */
       @media (min-width: 768px) {
         .video-wrapper {
-          width: 50vw;
+          width: 40vw;
         }
       }
 
@@ -71,7 +71,7 @@
     </div>
   
   <div class="text-content">
-    <h1 style="margin: 0;">404</h1>
+    <h1 style="margin: 0;">404 - Not Found</h1>
     <p>
       Go <a href="/">Home</a>, you're drunk. <br />
       What you're looking for is stuck somewhere in the realm of quantum entanglement.
