--- a/later.html
+++ b/later.html
@@ -104,12 +104,12 @@
 
     @media (max-width: 500px) {
   .menu-box {
-    padding: 20px;
+    padding: 25px;
     border-radius: 12px;
   }
 
   h1 {
-    font-size: 2.25rem;
+    font-size: 2.4rem;
   }
 
   nav a {
@@ -123,7 +123,8 @@
   <!-- Video Background -->
   <div class="video-background">
     <video autoplay muted loop playsinline>
-      <source src="photos/bckvid.mp4" type="video/mp4" />
+      <source src="photos/bkg720p30fps.webm" type="video/webm" />
+      <source src="photos/bkg720p30fps4000kbps.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
@@ -138,11 +139,11 @@
   </video>
       <h1>Jay22kar</h1>
       <nav>
-        <a href="/me">Me</a>
+        <a href="/me-myself-and-i">Me</a>
         <a href="/frozen-moments">Photos</a>
-        <a href="/thoughts">My favorites</a>
-        <a href="/projects">Thoughts & Feelings</a>
-        <a href="/jay222kar">The other Jay</a>
+        <a href="/my-favorites">My favorites</a>
+        <a href="/thoughts-and-feelings">Thoughts & Feelings</a>
+        <a href="/the-other-jay/">The other Jay</a>
       </nav>
     </div>
   </div>
