--- a/later.html
+++ b/later.html
@@ -143,7 +143,7 @@
         <a href="/frozen-moments">Photos</a>
         <a href="/my-favorites">My favorites</a>
         <a href="/thoughts-and-feelings">Thoughts & Feelings</a>
-        <a href="/the-other-jay/">The other Jay</a>
+        <a href="/the-other-jay">The other Jay</a>
       </nav>
     </div>
   </div>
