--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="I like salted peanuts." />
   <link rel="icon" type="image/png" href="photos/favicon.png">
   <title>Jay22kar</title>
   <style>
